# GoldenParams

./: .gitignore  LICENSE  MANIFEST.in  MASKED_ADAMW_USAGE.md  README.md  SHAPE_MISMATCH_FIX.md  analyze_mask_mismatch.py  check_mask_file.py  example_goldy.py  generate_dataset.py  golden.py  pyproject.toml  setup.py  test_mask_loading.py  test_masked_adamw.py  test_shape_mismatch.py  test_sparse_conversion.py
examples/: convert_to_sparse.py  example_goldy.py  foo.py  grpo_msked_example.py  grpo_msked_example_hard.py  qwen_gen.py  sft_example.py  sft_masked_example.py
golden_params/: __init__.py  core.py  mixin.py  sparse_mask_utils.py  utils.py
golden_params/optimizers/: adam.py  adamw.py  masked_adamw.py
verify/: test_sparse_export.py
